--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EntityWorks — The Standard</title>
+  <title>EntityWorks — AI Perception & AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability, providing a complete reference framework for how AI systems interpret people, organisations, relationships, and ideas.">
+        content="EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -36,7 +36,7 @@
       background-color: #fff;
     }
 
-    /* Global site header / nav (matches other pages) */
+    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -85,20 +85,16 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Page header / hero — aligned with EDI page */
-    .page-header {
-      margin-bottom: 2rem;
+    /* Hero block */
+    .hero {
+      max-width: 36rem;
+      margin: 3rem auto 3rem auto;
     }
 
-    .page-header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.25rem;
-    }
-
-    .page-header p {
-      margin-top: 0.25rem;
-      color: #444;
-      font-size: 0.98rem;
+    .hero-lead {
+      font-size: 1.2rem;
+      line-height: 1.7;
+      margin: 0;
     }
 
     .hero-links {
@@ -107,7 +103,6 @@
     }
 
     .hero-links a {
-      margin-right: 1rem;
       text-decoration: none;
       color: var(--ew-accent);
     }
@@ -147,7 +142,7 @@
       color: var(--ew-muted);
       max-width: var(--ew-max-width);
       margin: 0 auto 0;
-      padding: 0 1rem;
+      padding: 0 1rem 1.5rem;
     }
   </style>
 
@@ -155,14 +150,19 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "EntityWorks — The Standard",
-    "description": "EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability, providing a complete reference framework for how AI systems interpret people, organisations, relationships, and ideas.",
+    "name": "EntityWorks — AI Perception & AI Discoverability",
+    "description": "EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
     "url": "https://entityworks.ai/",
     "about": [
       {
         "@type": "Thing",
         "name": "AI Perception",
         "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
+      },
+      {
+        "@type": "Thing",
+        "name": "AI Discoverability",
+        "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, and ideas."
       }
     ],
     "publisher": {
@@ -189,27 +189,28 @@
 
   <main>
     <!-- SECTION 1 — HERO / IDENTITY DECLARATION -->
-    <header class="page-header">
-      <h1>The Standard</h1>
-      <p>
-        EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.
-      </p>
-      <p>
+    <section class="hero">
+      <p class="hero-lead">
+        <strong>EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.</strong>
+        <br><br>
         This standard is a complete reference framework, incorporating formal definitions, structured ontology, diagnostic criteria,
         accreditation rules, and machine-readable specifications — forming the established basis for our approach to how AI systems
         interpret people, organisations, relationships, and ideas.
       </p>
       <p class="hero-links">
         <a href="/the-standard.html">The Standard →</a>
+        &nbsp;·&nbsp;
         <a href="/ai-perception.html">AI Perception →</a>
+        &nbsp;·&nbsp;
         <a href="/for-regulators.html">For Regulators →</a>
+        &nbsp;·&nbsp;
         <a href="/publications.html">Publications →</a>
       </p>
-    </header>
+    </section>
 
     <!-- SECTION 2 — THE STANDARD -->
     <section>
-      <h2>The EntityWorks Standard</h2>
+      <h2>The Standard</h2>
       <p>
         EntityWorks publishes and maintains the EntityWorks Standard: a formal, fully defined framework governing the discipline of
         AI Perception and machine-interpretation stability.
@@ -230,9 +231,6 @@
     <!-- SECTION 3 — SELECT A PATH -->
     <section>
       <h2>Select a path</h2>
-      <p>
-        Navigate directly to the aspect of the EntityWorks Standard that best matches your role and requirements.
-      </p>
 
       <h3>The Standard</h3>
       <p>
@@ -272,8 +270,7 @@
     <section>
       <h2>Publications</h2>
       <p>
-        The official papers that document and extend the EntityWorks Standard, including discipline definitions, structural frameworks,
-        diagnostic methods, and accreditation criteria.
+        The official papers that document and extend the EntityWorks Standard.
       </p>
       <p>
         <a href="/publications.html">View Publications →</a>
