--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
   <p>
     <a href="privacy.html">Privacy</a> &middot;
     <a href="legal.html">Legal</a> &middot;
-    <a href="resources.html">Resources Hub</a> &middot;
+    <a href="publications.html">Publications</a> &middot;
     <a href="sitemap.xml">Sitemap</a> &middot;
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
