--- a/footer-home.html
+++ b/footer-home.html
@@ -1,7 +1,7 @@
 <footer style="max-width: 900px; margin: 3rem auto 2rem; padding: 0 1rem; text-align: left; font-size: 0.9rem; color: #333;">
   <p style="margin: 0;">
-    <strong>EntityWorks Ltd</strong>
-    82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE Company No: 16849701
+    <strong>EntityWorks Ltd</strong> 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE 
+    Company No: 16849701 
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 
@@ -12,7 +12,7 @@
   <p style="margin: 0.75rem 0 0;">
     <a href="/privacy.html">Privacy</a> &middot;
     <a href="/legal.html">Legal</a> &middot;
-    <a href="/resources.html">Resources Hub</a> &middot;
+    <a href="/publications.html">Publications</a> &middot;
     <a href="/sitemap.xml">Sitemap</a>
   </p>
 
