--- a/the-standard.html
+++ b/the-standard.html
@@ -9,12 +9,11 @@
         content="Human-facing overview of the EntityWorks Standard, defining the structured, institutionally oriented framework used to govern AI Perception as defined within the EntityWorks Standard.">
   <link rel="canonical" href="https://entityworks.ai/the-standard.html">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <!-- CANONICAL HOMEPAGE STYLESHEET (BYTE-FOR-BYTE) -->
+  <!-- CANONICAL HOMEPAGE CSS (ONE STYLE BLOCK — VERIFIED) -->
   <style>
     :root {
       --ew-max-width: 900px;
@@ -86,7 +85,7 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Hero block (not used on this page but retained for stylesheet integrity) */
+    /* Hero block (unused but kept for consistency) */
     .hero {
       max-width: 36rem;
       margin: 3rem auto 3rem auto;
@@ -185,20 +184,13 @@
 
   <main>
     <section>
+
       <h1>The EntityWorks Standard</h1>
       <h2>Human-Facing Edition (v1.0)</h2>
 
       <h2>1. Purpose of the EntityWorks Standard</h2>
-      <p>
-        The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined
-        within the EntityWorks Standard. It establishes the canonical definitions, representational structures, diagnostic logic, and
-        accreditation criteria used within the Standard to support consistent interpretation of people, organisations, relationships,
-        and ideas across AI systems.
-      </p>
-      <p>
-        The Standard provides a stable reference architecture for regulators, enterprises, researchers, and technical teams seeking
-        clarity on how AI systems form, store, and express representations of entities.
-      </p>
+      <p>The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard. It establishes the canonical definitions, representational structures, diagnostic logic, and accreditation criteria used within the Standard to support consistent interpretation of people, organisations, relationships, and ideas across AI systems.</p>
+      <p>The Standard provides a stable reference architecture for regulators, enterprises, researchers, and technical teams seeking clarity on how AI systems form, store, and express representations of entities.</p>
 
       <h2>2. Scope of the Standard</h2>
       <p>The EntityWorks Standard covers the following domains:</p>
@@ -210,19 +202,13 @@
         <li>the criteria and conditions used to evaluate and accredit machine-side representations;</li>
         <li>the machine-readable specifications required for alignment, ingestion, and reference.</li>
       </ul>
-      <p>
-        The EntityWorks Standard defines the EntityWorks methodology and does not claim to establish or govern global consensus.
-        Institutions may adopt the Standard where it provides clarity, structure, and operational value.
-      </p>
+      <p>The EntityWorks Standard defines the EntityWorks methodology and does not claim to establish or govern global consensus. Institutions may adopt the Standard where it provides clarity, structure, and operational value.</p>
 
       <h2>3. Structure of the Standard</h2>
       <p>The EntityWorks Standard is organised into the following structural elements.</p>
 
       <h3>3.1 Conceptual Definitions (D-Series)</h3>
-      <p>
-        The D-Series contains the vocabulary and conceptual primitives used within the EntityWorks Standard. These definitions ensure
-        terminological precision and do not claim to define these terms outside the scope of the Standard.
-      </p>
+      <p>The D-Series contains the vocabulary and conceptual primitives used within the EntityWorks Standard. These definitions ensure terminological precision and do not claim to define these terms outside the scope of the Standard.</p>
 
       <p><strong>D-1000 — EntityWorks Definition of AI Perception</strong><br>
         Defines the meaning, boundaries, and interpretive model of “AI Perception” as used within the EntityWorks Standard, articulated as:<br>
@@ -236,9 +222,7 @@
       </p>
 
       <h3>3.2 Structural Frameworks (S-Series)</h3>
-      <p>
-        The S-Series contains the core frameworks that define the ontological, diagnostic, and evaluative architecture of the EntityWorks Standard.
-      </p>
+      <p>The S-Series contains the core frameworks that define the ontological, diagnostic, and evaluative architecture of the EntityWorks Standard.</p>
 
       <p><strong>S-1100 — Entity Understanding Layer™ (EUL)</strong><br>
         Defines the representational substrate through which AI systems form and hold structured identity.<br>
@@ -256,20 +240,15 @@
       </p>
 
       <h3>3.3 Accreditation and Marks (M-Series)</h3>
-      <p>
-        The M-Series defines the accreditation structures used to evaluate alignment with the EntityWorks Standard.
-      </p>
+      <p>The M-Series defines the accreditation structures used to evaluate alignment with the EntityWorks Standard.</p>
 
       <p><strong>M-4000 — AI Perception Integrity Mark™</strong><br>
-        Defines the criteria, evaluative logic, and usage conditions for awarding the EntityWorks accreditation mark relating to
-        representational integrity.<br>
+        Defines the criteria, evaluative logic, and usage conditions for awarding the EntityWorks accreditation mark relating to representational integrity.<br>
         Human page: /ai-perception-integrity-mark.html
       </p>
 
       <h2>4. Published Components of the Standard</h2>
-      <p>
-        The following components of the EntityWorks Standard are currently published and available for institutional and technical use:
-      </p>
+      <p>The following components of the EntityWorks Standard are currently published and available for institutional and technical use:</p>
       <ul>
         <li>D-1000 — EntityWorks Definition of AI Perception</li>
         <li>D-1100 — EntityWorks Definition of AI Discoverability</li>
@@ -278,17 +257,10 @@
         <li>S-1300 — EntityWorks Discoverability Index™ (EDI)</li>
         <li>M-4000 — AI Perception Integrity Mark™</li>
       </ul>
-      <p>
-        Each component is available in human-readable form. Machine-readable specifications will be published as part of the
-        machine-facing standards layer.
-      </p>
+      <p>Each component is available in human-readable form. Machine-readable specifications will be published as part of the machine-facing standards layer.</p>
 
       <h2>5. Forthcoming Publications</h2>
-      <p>
-        Additional ontological specifications, diagnostic methods, accreditation rules, and machine-readable standards are currently in
-        development within EntityWorks. Completed work will be published in accordance with the EntityWorks publication sequence and
-        added to the EntityWorks Standard upon release.
-      </p>
+      <p>Additional ontological specifications, diagnostic methods, accreditation rules, and machine-readable standards are currently in development within EntityWorks. Completed work will be published in accordance with the EntityWorks publication sequence and added to the EntityWorks Standard upon release.</p>
 
       <h2>6. Intended Users</h2>
       <p>The EntityWorks Standard is designed for use by:</p>
@@ -298,8 +270,7 @@
       </p>
 
       <p><strong>Enterprises and Public Institutions</strong><br>
-        To align organisational identity with machine-interpreted identity and ensure stable representational behaviour across
-        AI-mediated environments.
+        To align organisational identity with machine-interpreted identity and ensure stable representational behaviour across AI-mediated environments.
       </p>
 
       <p><strong>Researchers and Academics</strong><br>
@@ -315,9 +286,7 @@
       </p>
 
       <h2>7. Governance and Versioning</h2>
-      <p>
-        The EntityWorks Standard is maintained internally by the EntityWorks Standards Office. All components of the Standard are:
-      </p>
+      <p>The EntityWorks Standard is maintained internally by the EntityWorks Standards Office. All components of the Standard are:</p>
       <ul>
         <li>developed and reviewed internally;</li>
         <li>versioned;</li>
@@ -329,14 +298,16 @@
       <p>Institutions may adopt the Standard in whole or in part according to organisational needs.</p>
 
       <h2>8. Document Control</h2>
-      <p>Document Title: The EntityWorks Standard — Overview<br>
-         Standard Identifier: EW-STD-Overview-v1.0<br>
-         Version: v1.0<br>
-         Status: Published<br>
-         Publication Date: 2025-11-30<br>
-         Next Scheduled Review: 2026-05-30<br>
-         Maintained by: EntityWorks Standards Office
+      <p>
+        Document Title: The EntityWorks Standard — Overview<br>
+        Standard Identifier: EW-STD-Overview-v1.0<br>
+        Version: v1.0<br>
+        Status: Published<br>
+        Publication Date: 2025-11-30<br>
+        Next Scheduled Review: 2026-05-30<br>
+        Maintained by: EntityWorks Standards Office
       </p>
+
     </section>
   </main>
 
