--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 <footer>
-  <p>&copy; EntityWorks. All rights reserved.</p>
+  <p>&copy; 2025 EntityWorks Ltd. All rights reserved.</p>
   <p>
-    <a href="privacy.html">Privacy</a> &middot;
-    <a href="legal.html">Legal</a> &middot;
-    <a href="publications.html">Publications</a> &middot;
-    <a href="sitemap.xml">Sitemap</a> &middot;
+    <a href="/privacy.html">Privacy</a> &middot;
+    <a href="/legal.html">Legal</a> &middot;
+    <a href="/publications.html">Publications</a> &middot;
+    <a href="/sitemap.xml">Sitemap</a> &middot;
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 </footer>
