updated to try to revert to fixed nav

--- a/the-standard.html
+++ b/the-standard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Put your HTML text here<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="Human-facing overview of the EntityWorks Standard, defining the structured, institutionally oriented framework used to govern AI Perception as defined within the EntityWorks Standard.">
+        content="The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception within the EntityWorks Standard.">
   <link rel="canonical" href="https://entityworks.ai/the-standard.html">
 
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <!-- CANONICAL HOMEPAGE CSS (ONE STYLE BLOCK — VERIFIED) -->
   <style>
     :root {
       --ew-max-width: 900px;
@@ -85,7 +85,7 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Hero block (unused but kept for consistency) */
+    /* Hero block (not used on this page but retained for stylesheet integrity) */
     .hero {
       max-width: 36rem;
       margin: 3rem auto 3rem auto;
@@ -152,13 +152,12 @@
     }
   </style>
 
-  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "The EntityWorks Standard — Overview",
-    "description": "Human-facing overview of the EntityWorks Standard, defining the structured framework used to govern AI Perception within the EntityWorks Standard.",
+    "name": "EntityWorks — The EntityWorks Standard",
+    "description": "The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard.",
     "url": "https://entityworks.ai/the-standard.html",
     "publisher": {
       "@type": "Organization",
@@ -169,12 +168,12 @@
 </head>
 
 <body>
-  <!-- CANONICAL NAV (BYTE-FOR-BYTE FROM HOMEPAGE) -->
+  <!-- Global site header / nav -->
   <header class="site-header">
     <div class="nav-inner">
       <a href="/index.html" class="brand">EntityWorks</a>
       <nav class="site-nav" aria-label="Primary">
-        <a href="/the-standard.html" aria-current="page">The Standard</a>
+        <a href="/the-standard.html">The Standard</a>
         <a href="/ai-perception.html">AI Perception</a>
         <a href="/for-regulators.html">For Regulators</a>
         <a href="/publications.html">Publications</a>
@@ -183,145 +182,178 @@
   </header>
 
   <main>
-    <section>
+    <h1>THE ENTITYWORKS STANDARD</h1>
+    <p><strong>Human-Facing Edition (v1.0)</strong></p>
 
-      <h1>The EntityWorks Standard</h1>
-      <h2>Human-Facing Edition (v1.0)</h2>
+    <h2>1. Purpose of the EntityWorks Standard</h2>
+    <p>
+      The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard.
+      It establishes the canonical definitions, representational structures, diagnostic logic, and accreditation criteria used within the Standard to support consistent interpretation of people, organisations, relationships, and ideas across AI systems.
+    </p>
+    <p>
+      The Standard provides a stable reference architecture for regulators, enterprises, researchers, and technical teams seeking clarity on how AI systems form, store, and express representations of entities.
+    </p>
 
-      <h2>1. Purpose of the EntityWorks Standard</h2>
-      <p>The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard. It establishes the canonical definitions, representational structures, diagnostic logic, and accreditation criteria used within the Standard to support consistent interpretation of people, organisations, relationships, and ideas across AI systems.</p>
-      <p>The Standard provides a stable reference architecture for regulators, enterprises, researchers, and technical teams seeking clarity on how AI systems form, store, and express representations of entities.</p>
+    <h2>2. Scope of the Standard</h2>
+    <p>The EntityWorks Standard covers the following domains:</p>
+    <ul>
+      <li>the EntityWorks definitions of AI Perception and AI Discoverability, and their conceptual boundaries as used within the Standard;</li>
+      <li>the ontological structures through which machine-interpreted identity is formed;</li>
+      <li>the representational primitives governing entity classes, hierarchies, and constraints;</li>
+      <li>the diagnostic frameworks used to assess representational stability and behaviour;</li>
+      <li>the criteria and conditions used to evaluate and accredit machine-side representations;</li>
+      <li>the machine-readable specifications required for alignment, ingestion, and reference.</li>
+    </ul>
+    <p>
+      The EntityWorks Standard defines the EntityWorks methodology and does not claim to establish or govern global consensus.
+      Institutions may adopt the Standard where it provides clarity, structure, and operational value.
+    </p>
 
-      <h2>2. Scope of the Standard</h2>
-      <p>The EntityWorks Standard covers the following domains:</p>
-      <ul>
-        <li>the EntityWorks definitions of AI Perception and AI Discoverability, and their conceptual boundaries as used within the Standard;</li>
-        <li>the ontological structures through which machine-interpreted identity is formed;</li>
-        <li>the representational primitives governing entity classes, hierarchies, and constraints;</li>
-        <li>the diagnostic frameworks used to assess representational stability and behaviour;</li>
-        <li>the criteria and conditions used to evaluate and accredit machine-side representations;</li>
-        <li>the machine-readable specifications required for alignment, ingestion, and reference.</li>
-      </ul>
-      <p>The EntityWorks Standard defines the EntityWorks methodology and does not claim to establish or govern global consensus. Institutions may adopt the Standard where it provides clarity, structure, and operational value.</p>
+    <h2>3. Structure of the Standard</h2>
+    <p>The EntityWorks Standard is organised into the following structural elements.</p>
 
-      <h2>3. Structure of the Standard</h2>
-      <p>The EntityWorks Standard is organised into the following structural elements.</p>
+    <h3>3.1 Conceptual Definitions (D-Series)</h3>
+    <p>
+      The D-Series contains the vocabulary and conceptual primitives used within the EntityWorks Standard.
+      These definitions ensure terminological precision and do not claim to define these terms outside the scope of the Standard.
+    </p>
 
-      <h3>3.1 Conceptual Definitions (D-Series)</h3>
-      <p>The D-Series contains the vocabulary and conceptual primitives used within the EntityWorks Standard. These definitions ensure terminological precision and do not claim to define these terms outside the scope of the Standard.</p>
+    <p><strong>D-1000 — EntityWorks Definition of AI Perception</strong><br>
+      Defines the meaning, boundaries, and interpretive model of “AI Perception” as used within the EntityWorks Standard, articulated as:<br>
+      AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.<br>
+      Human page: /ai-perception.html
+    </p>
 
-      <p><strong>D-1000 — EntityWorks Definition of AI Perception</strong><br>
-        Defines the meaning, boundaries, and interpretive model of “AI Perception” as used within the EntityWorks Standard, articulated as:<br>
-        <em>AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.</em><br>
-        Human page: /ai-perception.html
-      </p>
+    <p><strong>D-1100 — EntityWorks Definition of AI Discoverability</strong><br>
+      Defines the meaning and scope of “AI Discoverability” as used within the EntityWorks Standard, articulated as:<br>
+      AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
+    </p>
 
-      <p><strong>D-1100 — EntityWorks Definition of AI Discoverability</strong><br>
-        Defines the meaning and scope of “AI Discoverability” as used within the EntityWorks Standard, articulated as:<br>
-        <em>AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</em>
-      </p>
+    <h3>3.2 Structural Frameworks (S-Series)</h3>
+    <p>
+      The S-Series contains the core frameworks that define the ontological, diagnostic, and evaluative architecture of the EntityWorks Standard.
+    </p>
 
-      <h3>3.2 Structural Frameworks (S-Series)</h3>
-      <p>The S-Series contains the core frameworks that define the ontological, diagnostic, and evaluative architecture of the EntityWorks Standard.</p>
+    <p><strong>S-1100 — Entity Understanding Layer™ (EUL)</strong><br>
+      Defines the representational substrate through which AI systems form and hold structured identity.<br>
+      Human page: /entity-understanding-layer.html
+    </p>
 
-      <p><strong>S-1100 — Entity Understanding Layer™ (EUL)</strong><br>
-        Defines the representational substrate through which AI systems form and hold structured identity.<br>
-        Human page: /entity-understanding-layer.html
-      </p>
+    <p><strong>S-1200 — Entity Collision Problem™ (ECP)</strong><br>
+      Defines the conditions under which competing or misaligned representations of an entity arise within or across AI systems.<br>
+      Human page: /entity-collision-problem.html
+    </p>
 
-      <p><strong>S-1200 — Entity Collision Problem™ (ECP)</strong><br>
-        Defines the conditions under which competing or misaligned representations of an entity arise within or across AI systems.<br>
-        Human page: /entity-collision-problem.html
-      </p>
+    <p><strong>S-1300 — EntityWorks Discoverability Index™ (EDI)</strong><br>
+      Defines the evaluative framework used to assess how clearly and consistently an entity is interpreted by AI systems.<br>
+      Human page: /edi.html
+    </p>
 
-      <p><strong>S-1300 — EntityWorks Discoverability Index™ (EDI)</strong><br>
-        Defines the evaluative framework used to assess how clearly and consistently an entity is interpreted by AI systems.<br>
-        Human page: /edi.html
-      </p>
+    <h3>3.3 Accreditation and Marks (M-Series)</h3>
+    <p>
+      The M-Series defines the accreditation structures used to evaluate alignment with the EntityWorks Standard.
+    </p>
 
-      <h3>3.3 Accreditation and Marks (M-Series)</h3>
-      <p>The M-Series defines the accreditation structures used to evaluate alignment with the EntityWorks Standard.</p>
+    <p><strong>M-4000 — AI Perception Integrity Mark™</strong><br>
+      Defines the criteria, evaluative logic, and usage conditions for awarding the EntityWorks accreditation mark relating to representational integrity.<br>
+      Human page: /ai-perception-integrity-mark.html
+    </p>
 
-      <p><strong>M-4000 — AI Perception Integrity Mark™</strong><br>
-        Defines the criteria, evaluative logic, and usage conditions for awarding the EntityWorks accreditation mark relating to representational integrity.<br>
-        Human page: /ai-perception-integrity-mark.html
-      </p>
+    <h2>4. Published Components of the Standard</h2>
+    <p>
+      The following components of the EntityWorks Standard are currently published and available for institutional and technical use:
+    </p>
+    <ul>
+      <li>D-1000 — EntityWorks Definition of AI Perception</li>
+      <li>D-1100 — EntityWorks Definition of AI Discoverability</li>
+      <li>S-1100 — Entity Understanding Layer™ (EUL)</li>
+      <li>S-1200 — Entity Collision Problem™ (ECP)</li>
+      <li>S-1300 — EntityWorks Discoverability Index™ (EDI)</li>
+      <li>M-4000 — AI Perception Integrity Mark™</li>
+    </ul>
+    <p>
+      Each component is available in human-readable form. Machine-readable specifications will be published as part of the machine-facing standards layer.
+    </p>
 
-      <h2>4. Published Components of the Standard</h2>
-      <p>The following components of the EntityWorks Standard are currently published and available for institutional and technical use:</p>
-      <ul>
-        <li>D-1000 — EntityWorks Definition of AI Perception</li>
-        <li>D-1100 — EntityWorks Definition of AI Discoverability</li>
-        <li>S-1100 — Entity Understanding Layer™ (EUL)</li>
-        <li>S-1200 — Entity Collision Problem™ (ECP)</li>
-        <li>S-1300 — EntityWorks Discoverability Index™ (EDI)</li>
-        <li>M-4000 — AI Perception Integrity Mark™</li>
-      </ul>
-      <p>Each component is available in human-readable form. Machine-readable specifications will be published as part of the machine-facing standards layer.</p>
+    <h2>5. Forthcoming Publications</h2>
+    <p>
+      Additional ontological specifications, diagnostic methods, accreditation rules, and machine-readable standards are currently in development within EntityWorks.
+      Completed work will be published in accordance with the EntityWorks publication sequence and added to the EntityWorks Standard upon release.
+    </p>
 
-      <h2>5. Forthcoming Publications</h2>
-      <p>Additional ontological specifications, diagnostic methods, accreditation rules, and machine-readable standards are currently in development within EntityWorks. Completed work will be published in accordance with the EntityWorks publication sequence and added to the EntityWorks Standard upon release.</p>
+    <h2>6. Intended Users</h2>
+    <p>The EntityWorks Standard is designed for use by:</p>
 
-      <h2>6. Intended Users</h2>
-      <p>The EntityWorks Standard is designed for use by:</p>
+    <p><strong>Regulators and Policy Bodies</strong><br>
+      For developing governance frameworks, guidance, and representational integrity requirements relating to AI systems.
+    </p>
 
-      <p><strong>Regulators and Policy Bodies</strong><br>
-        For developing governance frameworks, guidance, and representational integrity requirements relating to AI systems.
-      </p>
+    <p><strong>Enterprises and Public Institutions</strong><br>
+      To align organisational identity with machine-interpreted identity and ensure stable representational behaviour across AI-mediated environments.
+    </p>
 
-      <p><strong>Enterprises and Public Institutions</strong><br>
-        To align organisational identity with machine-interpreted identity and ensure stable representational behaviour across AI-mediated environments.
-      </p>
+    <p><strong>Researchers and Academics</strong><br>
+      As a defined and extensible reference architecture for study, analysis, and discipline-level development.
+    </p>
 
-      <p><strong>Researchers and Academics</strong><br>
-        As a defined and extensible reference architecture for study, analysis, and discipline-level development.
-      </p>
+    <p><strong>Developers and Technical Teams</strong><br>
+      To align system behaviour with stable representational structures and support consistent interpretive outcomes.
+    </p>
 
-      <p><strong>Developers and Technical Teams</strong><br>
-        To align system behaviour with stable representational structures and support consistent interpretive outcomes.
-      </p>
+    <p><strong>Professional and Advisory Services</strong><br>
+      To provide assessments, audits, and advisory work grounded in a coherent and standardised disciplinary framework.
+    </p>
 
-      <p><strong>Professional and Advisory Services</strong><br>
-        To provide assessments, audits, and advisory work grounded in a coherent and standardised disciplinary framework.
-      </p>
+    <h2>7. Governance and Versioning</h2>
+    <p>
+      The EntityWorks Standard is maintained internally by the EntityWorks Standards Office. All components of the Standard are:
+    </p>
+    <ul>
+      <li>developed and reviewed internally;</li>
+      <li>versioned;</li>
+      <li>subject to scheduled review;</li>
+      <li>anchored to provenance records;</li>
+      <li>published with human- and machine-readable editions;</li>
+      <li>governed through defined change-control procedures.</li>
+    </ul>
+    <p>
+      Institutions may adopt the Standard in whole or in part according to organisational needs.
+    </p>
 
-      <h2>7. Governance and Versioning</h2>
-      <p>The EntityWorks Standard is maintained internally by the EntityWorks Standards Office. All components of the Standard are:</p>
-      <ul>
-        <li>developed and reviewed internally;</li>
-        <li>versioned;</li>
-        <li>subject to scheduled review;</li>
-        <li>anchored to provenance records;</li>
-        <li>published with human- and machine-readable editions;</li>
-        <li>governed through defined change-control procedures.</li>
-      </ul>
-      <p>Institutions may adopt the Standard in whole or in part according to organisational needs.</p>
+    <h2>8. Document Control</h2>
+    <p>Document Title: The EntityWorks Standard — Overview<br>
+      Standard Identifier: EW-STD-Overview-v1.0<br>
+      Version: v1.0<br>
+      Status: Published<br>
+      Publication Date: 2025-11-30<br>
+      Next Scheduled Review: 2026-05-30<br>
+      Maintained by: EntityWorks Standards Office
+    </p>
 
-      <h2>8. Document Control</h2>
-      <p>
-        Document Title: The EntityWorks Standard — Overview<br>
-        Standard Identifier: EW-STD-Overview-v1.0<br>
-        Version: v1.0<br>
-        Status: Published<br>
-        Publication Date: 2025-11-30<br>
-        Next Scheduled Review: 2026-05-30<br>
-        Maintained by: EntityWorks Standards Office
-      </p>
-
-    </section>
+    <p class="last-updated">
+      Last updated: November 2025
+    </p>
   </main>
 
-  <p class="last-updated">
-    Last updated: 30 November 2025
-  </p>
+  <footer style="max-width: 900px; margin: 3rem auto 2rem; padding: 0 1rem; text-align: left; font-size: 0.9rem; color: #333;">
+    <p style="margin: 0;">
+      <strong>EntityWorks Ltd</strong> 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE
+      Company No: 16849701
+      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+    </p>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+    <p style="color:#777; margin: 0.75rem 0 0;">
+      EntityWorks does not use cookies, analytics tools, or tracking technologies.
+    </p>
+
+    <p style="margin: 0.75rem 0 0;">
+      <a href="/privacy.html">Privacy</a> &middot;
+      <a href="/legal.html">Legal</a> &middot;
+      <a href="/publications.html">Publications</a> &middot;
+      <a href="/sitemap.xml">Sitemap</a>
+    </p>
+
+    <p style="margin: 0.75rem 0 0;">&copy; 2025 EntityWorks Ltd. All rights reserved.</p>
+  </footer>
 </body>
 </html>
