--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,13 @@
-<footer>
-  <p>&copy; 2025 EntityWorks Ltd. All rights reserved.</p>
-  <p>
+<footer style="max-width: 900px; margin: 3rem auto 2rem; padding: 0 1rem; text-align: left; font-size: 0.9rem; color: #333;">
+  <p style="margin: 0;">
     <a href="/privacy.html">Privacy</a> &middot;
     <a href="/legal.html">Legal</a> &middot;
     <a href="/publications.html">Publications</a> &middot;
     <a href="/sitemap.xml">Sitemap</a> &middot;
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+  </p>
+
+  <p style="margin: 0.75rem 0 0; color:#777;">
+    © 2025 EntityWorks Ltd. All rights reserved.
   </p>
 </footer>
